Revision history for App-Doh

          - Put page status on a div since defaultStatus not supported
          - Removed ForwardEvents class from JS. Doesn't work
          - Created editor.tt for the markdown editor
          - Style fixes to post navigation buttons

0.5.1     2014-07-29 18:35:58
          - Made Root controller look like a routing table
          - Made component loading a role
          - Added keybindings for the markdown editor
          - Refactored markdown editor
          - Switched status messages to JS notice board

0.4.1     2014-07-26 01:04:29
          - Added insertGraves to markdown editor
          - Added CodeMirror JS markdown editor
          - Added config user attribute to own Daemon process
          - Added Role::Component. Doh.pm contains only VERSION number
          - Streamlined the controller code
          - Server throws better exceptions
          - Patched bug in warnings::illegalproto for Perl < 5.012
          - Pass appclass in from doh-server
          - Abstracted apps env var access out to a function
          - Split Behaviour js class out into own file
          - Markdown allows class on trailing three graves
          - Added default view configuration option
          - Use App::Doh in ::Server to get VERSION in scope

0.3.1     2014-07-19 20:44:34
          - Tested on Chrome and Opera
          - Server now loads MVC components at runtime
          - Rationalised the templates
          - Fixed footer and add JS handler for content margin-bottom
          - Added minimum password length
          - Admin page functional improvements
          - Improved CSS for forms
          - Upated metadata
          - Added user profile management
          - Added ::Session to MANIFEST
          - Added ::Session. Added session timeout
          - Adjusted CSS tips box model
          - Adjusted CSS prompt widths
          - Removed unsed dependency
          - Fixed tests