@@ -158,7 +158,7 @@ table tr th:last-child,table tr td:last-child{border-right:1px solid #adcb83}
 .homepage-hero .homepage-image{margin-bottom:18px;max-height:475px}
 .homepage-hero .text-center h2{margin:18px auto;text-align:center}
 .icon-container{background-color:#000;-khtml-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;font-size:12px;height:30px;line-height:26px;margin:12px 0 12px 18px;padding:3px}
-.info-container{background-color:#f5f5f6;-khtml-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;font-size:12px;height:30px;line-height:26px;margin:0 0 12px 18px;padding:3px;text-transform:uppercase}
+.info-container{background-color:#f5f5f6;-khtml-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;font-size:12px;height:30px;line-height:26px;margin:3px 0;padding:3px;text-transform:uppercase}
 .keystroke{background-color:#f5f5f6;border:1px solid #adcb83;-khtml-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;color:#41402b;font-family:"Andale Mono",monaco,"Courier New",courier,monospace;padding:.125rem .25rem 0}
 .label{background-color:#f5f5f6;color:#41402b;display:inline-block;font-size:14px;font-weight:400;font-family:"Roboto Slab","Times New Roman","Times","serif";line-height:18px;margin:4px 0;min-width:110px;padding:5px 9px 5px 0;position:relative;text-align:left;text-decoration:none;vertical-align:top;white-space:nowrap}
 .lead{font-size:18px;line-height:36px}
