@@ -1,5 +1,4 @@
 /* Perl Artistic license except where stated otherwise */
-/* TODO: Fix links in footer */
 /* Mixins */
 .border-radius(@radius: 5px) {
    -khtml-border-radius: @radius; -webkit-border-radius: @radius;
@@ -353,7 +352,7 @@ table tr th:last-child, table tr td:last-child {
 }
 .info-container {
    background-color: @sidebar-background; .border-radius;
-   font-size: 12px; height: 30px; line-height: 26px; margin: 0 0 12px 18px;
+   font-size: 12px; height: 30px; line-height: 26px; margin: 3px 0;
    padding: 3px; text-transform: uppercase;
 }
 .keystroke {
