@@ -2,16 +2,6 @@
 <form action="[% links.base_uri %]user"
      enctype="application/x-www-form-urlencoded"
       method="post" name="profile-user">
-[% IF prefs.use_flags -%]
-[%    tip = loc( 'National flag of requested the language' ) -%]
-         <div class="info-container pull-right tips"
-              title="[% page.hint _ ' ~ ' _ tip %]">
-            <span class="flag_[% req.language %]"></span></div>
-[% ELSE -%]
-[%    tip = loc( 'Requested language' ) -%]
-         <div class="info-container pull-right tips"
-              title="[% page.hint _ ' ~ ' _ tip %]">[% req.language %]</div>
-[% END -%]
    <label  class="label" for="email">[% loc( 'Email address' ) %]</label>
    <input  class="standard-field" name="email" type="textfield"
            value="[% page.email %]"><br/>
@@ -33,4 +23,15 @@
    <br>
    <button class="pull-right button" name="_method" type="submit"
            value="update_profile">[% loc( 'Update' ) %]</button>
+   <span class="label">[% loc( 'Language' ) %]</span>
+[% IF prefs.use_flags -%]
+[%    tip = loc( 'National flag of requested the language' ) -%]
+         <div class="info-container tips"
+              title="[% page.hint _ ' ~ ' _ tip %]">
+            <span class="flag_[% req.language %]"></span></div>
+[% ELSE -%]
+[%    tip = loc( 'Requested language' ) -%]
+         <div class="info-container tips"
+              title="[% page.hint _ ' ~ ' _ tip %]">[% req.language %]</div>
+[% END -%]
 </form>
